Minor adjustments to backend

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -583,6 +583,12 @@
     "Verify the game's integrity" : {
 
     },
+    "View all currently signed in accounts" : {
+
+    },
+    "View all downloads" : {
+
+    },
     "View your games" : {
 
     },
