Unified game operation management • Overloaded Legendary install function with support for custom install argument struct • Implemented queue in backend, currently nonfunctional • Updated strings

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -237,7 +237,7 @@
     "Force quit all games when Mythic closes" : {
 
     },
-    "Force Quit Applications" : {
+    "Force Quit All Windows® Applications" : {
 
     },
     "Game Location:" : {
@@ -376,6 +376,9 @@
 
     },
     "Next" : {
+
+    },
+    "No downloads are queued." : {
 
     },
     "Not implemented yet" : {
