--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -4,6 +4,19 @@
     "\nEnter the 'authorisationCode' from the JSON response in the field below." : {
 
     },
+    "(%@ Elapsed)" : {
+
+    },
+    "(%lld/%lld Objects)" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "(%1$lld/%2$lld Objects)"
+          }
+        }
+      }
+    },
     "(Don't worry, you can still install Mythic Engine later.)" : {
 
     },
@@ -13,7 +26,19 @@
     "(please restart Mythic.)" : {
 
     },
+    "(raw)" : {
+
+    },
+    "(read)" : {
+
+    },
     "(Supports selective downloads)" : {
+
+    },
+    "(write)" : {
+
+    },
+    "%@" : {
 
     },
     "%@ %@ (%@)" : {
@@ -26,10 +51,22 @@
         }
       }
     },
+    "%lld MB Downloaded" : {
+
+    },
+    "%lld MB Written" : {
+
+    },
+    "%lld MB/s" : {
+
+    },
     "%lld%%" : {
 
     },
     "%lld%% complete" : {
+
+    },
+    "%lld%% Complete" : {
 
     },
     "A link should've opened in your browser. If not, click" : {
@@ -144,6 +181,9 @@
     "Delete \"%@\"" : {
 
     },
+    "Disk Speed:" : {
+
+    },
     "Dismiss loading" : {
 
     },
@@ -163,6 +203,9 @@
 
     },
     "Download \"%@\"" : {
+
+    },
+    "Download Speed:" : {
 
     },
     "Downloading Game Porting Toolkit..." : {
@@ -267,6 +310,9 @@
     "Import a Game" : {
 
     },
+    "Import game" : {
+
+    },
     "Import with DLCs" : {
 
     },
@@ -291,7 +337,7 @@
     "Installed" : {
 
     },
-    "Installing \"[Game]\"..." : {
+    "Installing \"%@\"..." : {
 
     },
     "Installing Game Porting Toolkit..." : {
@@ -381,6 +427,12 @@
     "Next" : {
 
     },
+    "No games can be shown." : {
+
+    },
+    "No installation is currently running." : {
+
+    },
     "Not implemented yet" : {
 
     },
@@ -397,6 +449,9 @@
 
     },
     "Play \"%@\"" : {
+
+    },
+    "Progress:" : {
 
     },
     "Purchase new games from Epic" : {
@@ -505,6 +560,9 @@
 
     },
     "Time for an update!" : {
+
+    },
+    "Time Remaining:" : {
 
     },
     "Unable to boot default bottle." : {
