Basic support view implementation + strings

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -25788,6 +25788,9 @@
         }
       }
     },
+    "No games are favourited." : {
+
+    },
     "No games can be shown." : {
       "localizations" : {
         "af" : {
