Add !DEBUG compiler flag for automated moving to /Applications

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -12447,6 +12447,9 @@
         }
       }
     },
+    "Engine (Wine)" : {
+
+    },
     "Enhanced Sync (MSync)" : {
       "localizations" : {
         "af" : {
@@ -21430,6 +21433,9 @@
         }
       }
     },
+    "Launch Arguments" : {
+
+    },
     "Launch Configurator" : {
       "localizations" : {
         "af" : {
@@ -22193,9 +22199,6 @@
           }
         }
       }
-    },
-    "Local" : {
-
     },
     "Manage containers for Windows® applications" : {
       "localizations" : {
