Resolve SwiftLint Violations Remove optional String <-> Data conversion, and add error handling for bottle management

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -8827,6 +8827,7 @@
       }
     },
     "Current Bottle" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -9402,6 +9403,7 @@
       }
     },
     "Default Bottle Settings" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -12449,6 +12451,7 @@
 
     },
     "Enhanced Sync (MSync)" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -26991,6 +26994,7 @@
 
     },
     "Performance HUD" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -29668,6 +29672,7 @@
       }
     },
     "Retina Mode" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -29858,6 +29863,7 @@
       }
     },
     "Retina Mode cannot be modified: %@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
